--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "strong-runner",
-  "description": "StrongLoop Process Manager",
-  "version": "3.1.3",
+  "description": "run app with strong-supervisor",
+  "version": "1.0.0",
   "repository": {
     "type": "git",
     "url": "git://github.com/strongloop/strong-runner.git"
