--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "main": "index.js",
   "scripts": {
     "lint": "eslint ./ && jscs ./",
+    "pretest": "eslint ./ && jscs ./",
     "test": "tap ./test/test-*"
   },
   "bin": {},
