--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "scripts": {
     "lint": "eslint ./ && jscs ./",
     "pretest": "eslint ./ && jscs ./",
-    "test": "tap ./test/test-*"
+    "test": "tap --bail ./test/test-*"
   },
   "bin": {},
   "devDependencies": {
@@ -23,7 +23,7 @@
     "byline": "^4.2.1",
     "eslint": "^0.24.0",
     "jscs": "^1.13.1",
-    "tap": "^1.2.0"
+    "tap": "^1.3.1"
   },
   "dependencies": {
     "debug": "^2.0.0",
