--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "strong-runner",
   "description": "run app with strong-supervisor",
   "version": "6.0.0",
+  "engines": {
+    "node": ">=4"
+  },
   "repository": {
     "type": "git",
     "url": "git://github.com/strongloop/strong-runner.git"
